--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Prakash's Portfolio </title>
     </head>
     <body>
         <!--=================    === HEADER ====================-->
