Title and img Fix

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h2 class="section_title">About Me</h2>
                 <span class="section_subtitle">My introduction</span>
                 <div class="about_container container grid">
-                    <img src="assets/img/about.jpg" alt="" class="about_img">
+                    <img src="assets/img/about.png" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
                             Full Stack developer, with extensive knowledge and good experience,
