--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                         <a href="#portfolio" class="footer_link">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#Contact" class="footer_link">Contact Me</a>
+                        <a href="#contact" class="footer_link">Contact Me</a>
                     </li>
                 </ul>
                 <div class="footer_social">
