--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Prakash's Portfolio </title>
+        <link rel="icon" type="image/png" href="assets/img/title.png">
     </head>
     <body>
         <!--=================    === HEADER ====================-->
