--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <h1 class="home_title">Hi,I'am Prakash</h1>
                         <h3 class="home_subtitle">Full Stack Developer</h3>
                         <p class="home_description">  Junior level experience in web application development knowledge, learning, producing quality work.</p>
-                        <a href="contact" class="button button--flex">
+                        <a href="#contact" class="button button--flex">
                            Contact Me<i class="uil uil-message button_icon"></i>
                         </a>
                     </div>
