--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section">
              <h2 class="section_title">Qualification</h2>
-             <span class="section_subtitle">My personl Journey</span>
+             <span class="section_subtitle">My Personal Journey</span>
              <div class="qualification_cpntainer container">
                 <div class="qualification_tabs">
                     <div class="qualification_button button--flex qualification_active" data-target='#education' >
