--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                         </div>
                     </div>
                 </div>
-                <form action="" class="contact_form grid">
+                <!-- <form action="" class="contact_form grid">
                     <div class="contact_inputs grid">
                         <div class="contact_content">
                             <label for="" class="contact_label">Name</label>
@@ -692,7 +692,7 @@
                             <i class="uil uil-message button_icon "></i>
                         </a>
                     </div>
-                </form>
+                </form> -->
             </div>
             </section>
         </main>
